# obsidian-local-sync-server

./: .gitignore  README.md  app-universal-release-aligned.apk.idsig  build-android.js  package.json  pnpm-lock.yaml  svelte.config.js  window_dump.xml
src/: app.css  app.html
src-tauri/: Cargo.toml  obsidian_sync.db  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  scratch.rs  server.rs
src/routes/: +page.svelte
