[package]
name = "obsidian-local-sync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "obsidian_local_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "custom-protocol", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8.9", features = ["ws", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
dav-server = "0.11.0"
local-ip-address = "0.6"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tauri-plugin-dialog = "2"

